RESOLVED FIXED53006
[Qt] Fix warnings about unregistering an invalid timer
https://bugs.webkit.org/show_bug.cgi?id=53006
Summary [Qt] Fix warnings about unregistering an invalid timer
Andreas Kling
Reported 2011-01-24 06:27:14 PST
Recently QtWebKit is moaning about "Application asked to unregister timer 0xh3rpd3rp which is not registered in this thread. Fix application."
Attachments
Proposed patch (1.46 KB, patch)
2011-01-24 06:29 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2011-01-24 06:29:45 PST
Created attachment 79918 [details] Proposed patch
Andreas Kling
Comment 2 2011-01-24 06:46:30 PST
Comment on attachment 79918 [details] Proposed patch Clearing flags on attachment: 79918 Committed r76515: <http://trac.webkit.org/changeset/76515>
Andreas Kling
Comment 3 2011-01-24 06:46:40 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4 2011-01-24 08:46:46 PST
http://trac.webkit.org/changeset/76515 might have broken GTK Linux 32-bit Debug The following tests are not passing: editing/selection/extend-selection-bidi.html
Note You need to log in before you can comment on or make changes to this bug.