2011-01-24  Andreas Kling  <kling@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix warnings about unregistering an invalid timer
        https://bugs.webkit.org/show_bug.cgi?id=53006

        The ShadowBuffer's purge timer ID was initialized with 0 which lead
        to us calling QObject::killTimer(0), causing some qWarnings.

        * platform/graphics/qt/ContextShadowQt.cpp:
        (WebCore::ShadowBuffer::ShadowBuffer):
        (WebCore::ShadowBuffer::schedulePurge):


Canonical link: https://commits.webkit.org/66748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76515 268f45cc-cd09-0410-ab3c-d52691b4dbfc